--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,21 +1,21 @@
 <div class="container mx-auto p-6">
-  <div class="flex flex-col lg:flex-row justify-between">
+  <div class="flex flex-col lg:flex-row justify-between space-x-4">
     <div class="w-full lg:w-2/3">
-      <h1 class="text-3xl font-bold mb-6">Cart</h1>
+      <h1 class="text-3xl font-bold text-black mb-6">Cart</h1>
       <div *ngFor="let item of cartItems" class="bg-white p-4 rounded-lg shadow-md mb-6">
         <div class="flex items-center mb-4">
           <img [src]="item.imageUrl" [alt]="item.productName" class="w-40 h-50 object-cover rounded-md mr-4">
           <div class="flex-1">
-            <h2 class="text-xl font-semibold">{{item.productName}}</h2>
-            <p class="text-gray-500">$ {{item.price}}</p>
+            <h2 class="text-xl font-semibold text-black">{{ item.productName }}</h2>
+            <p class="text-gray-500">$ {{ item.price }}</p>
           </div>
           <div class="flex items-center">
             <button (click)="decrementQuantity(item)" class="border px-2 py-1">-</button>
-            <span class="px-4">{{item.quantity}}</span>
+            <span class="px-4 text-black">{{ item.quantity }}</span>
             <button (click)="incrementQuantity(item)" class="border px-2 py-1">+</button>
           </div>
           <div class="ml-4">
-            <p class="text-lg font-semibold">Total: $ {{item.price * item.quantity}}</p>
+            <p class="text-lg font-semibold text-black">Total: $ {{ item.price * item.quantity }}</p>
           </div>
           <button (click)="removeItem(item.productId)" class="ml-4 text-red-500">x</button>
         </div>
@@ -23,22 +23,25 @@
     </div>
 
     <div class="w-full lg:w-1/3 bg-white p-6 rounded-lg shadow-md">
-      <h2 class="text-2xl font-semibold mb-6">Order Summary</h2>
-      <div class="flex justify-between mb-4">
+      <h2 class="text-2xl font-semibold text-black mb-6">Order Summary</h2>
+      <div class="flex justify-between text-black mb-4">
         <span>Subtotal</span>
-        <span>$ {{totalAmount}}</span>
+        <span>$ {{ totalAmount }}</span>
       </div>
       <div class="border-t pt-4">
-        <div class="flex justify-between text-xl font-semibold">
+        <div class="flex justify-between text-xl font-semibold text-black">
           <span>Total Price</span>
-          <span>$ {{totalAmount}}</span>
+          <span>$ {{ totalAmount }}</span>
         </div>
       </div>
       <div class="promo-code mt-6">
-        <input type="text" placeholder="Please enter promo code" [(ngModel)]="promoCode" class="border p-2 w-full rounded mb-4">
+        <input type="text" placeholder="Please enter promo code" [(ngModel)]="promoCode"
+               class="border p-2 w-full rounded mb-4">
       </div>
-        <button (click)="applyDiscount()" [disabled]="isDiscountApplied" class="w-full bg-blue-500 text-white py-1 px-3 rounded text-sm">Apply Discount</button>
-      <a routerLink="/checkout" class="w-full bg-green-700 text-white py-2 rounded-lg mt-6">Proceed to checkout</a>
+      <div class="flex flex-col items-center space-y-4">
+        <button (click)="applyDiscount()" [disabled]="isDiscountApplied" class="w-1/3 bg-blue-500 text-white py-1 px-3 rounded text-sm">Apply Discount</button>
+        <a routerLink="/checkout" class="w-1/3 bg-green-700 text-white py-2 rounded-lg mt-6">Proceed to checkout</a>
+      </div>
     </div>
   </div>
 </div>
