--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -39,8 +39,8 @@
                class="border p-2 w-full rounded mb-4">
       </div>
       <div class="flex flex-col items-center space-y-4">
-        <button (click)="applyDiscount()" [disabled]="isDiscountApplied" class="w-1/3 bg-blue-500 text-white py-1 px-3 rounded text-sm">Apply Discount</button>
-        <a routerLink="/checkout" class="w-1/3 bg-green-700 text-white py-2 rounded-lg mt-6">Proceed to checkout</a>
+        <button (click)="applyDiscount()" [disabled]="isDiscountApplied" class="w-1/3 bg-gray-400 text-gray-100 px-2 py-1 rounded hover:bg-gray-400">Apply Discount</button>
+        <a routerLink="/checkout" class="w-1/3 bg-gray-600 text-gray-100 py-1 px-3 hover:bg-gray-500 text-center rounded">Proceed to checkout</a>
       </div>
     </div>
   </div>
