--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper bg-white text-black">
+<div class="wrapper bg-gray text-black">
   <div class="content container mx-auto p-4 max-w-4xl">
     <h1 class="text-3xl font-bold text-black mb-4">Checkout</h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -70,7 +70,7 @@
             <div></div>
             <div>
               <button type="submit"
-                      class="w-full bg-green-500 text-white py-2 px-4 rounded-md shadow hover:bg-green-700 transition duration-150">
+                      class="w-full bg-gray-500 text-white py-2 px-4 rounded-md shadow hover:bg-green-700 transition duration-150">
                 Next
               </button>
             </div>
@@ -80,15 +80,16 @@
       </div>
       <div class="order-summary p-4 border border-gray-700 rounded-md">
         <h2 class="text-xl font-bold mb-4">Order summary</h2>
-        <div class="flex items-center justify-between mb-4">
-          <img src="path/to/product-image.png" alt="Product" class="w-16 h-16 rounded-md">
+        <div *ngFor="let item of cartItems" class="flex items-center justify-between mb-4">
+          <img [src]="item.imageUrl" [alt]="item.productName" class="w-16 h-16 rounded-md">
           <div class="ml-4">
-            <p class="text-sm font-medium">Soft Enamel Pin</p>
-            <p class="text-sm text-gray-400">€10.00</p>
+            <p class="text-sm text-black">{{ item.productName }}</p>
+            <p class="text-sm text-black">€{{ item.price }}</p>
+            <p class="text-sm text-black">Quantity: {{ item.quantity }}</p>
           </div>
         </div>
         <div class="mb-4">
-          <a class="text-sm text-green-500" (click)="toggleNoteInput()">Need to leave a note or instructions?</a>
+          <a class="text-sm text-gray-300" (click)="toggleNoteInput()">Need to leave a note or instructions?</a>
         </div>
         <div *ngIf="showNoteInput">
           <textarea id="note" class="mt-1 block w-full rounded-md border-gray-600 bg-blend-lighten text-black shadow-sm" placeholder="Enter your note here" rows="2"></textarea>
@@ -96,7 +97,7 @@
         <div class="border-t border-gray-700 pt-4">
           <div class="flex items-center justify-between text-sm mb-2">
             <span>Subtotal</span>
-            <span>€10.00</span>
+            <span>€{{ totalAmount }}</span>
           </div>
           <div class="flex items-center justify-between text-sm mb-2">
             <span>Shipping</span>
@@ -108,7 +109,7 @@
           </div>
           <div class="flex items-center justify-between text-lg font-bold">
             <span>Total</span>
-            <span>EUR €10.00</span>
+            <span>EUR €{{ totalAmount }}</span>
           </div>
         </div>
       </div>
