--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,6 +1,8 @@
+<app-stepper></app-stepper>
 <div class="container mx-auto p-6">
   <div class="flex flex-col lg:flex-row justify-between space-x-4">
     <div class="w-full lg:w-2/3">
+
       <h1 class="text-3xl font-bold text-black mb-6">Cart</h1>
       <div *ngFor="let item of cartItems" class="bg-white p-4 rounded-lg shadow-md mb-6">
         <div class="flex items-center mb-4">
@@ -45,3 +47,6 @@
     </div>
   </div>
 </div>
+
+
+
