--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,3 +1,4 @@
+<app-stepper></app-stepper>
 <div class="wrapper bg-gray text-black">
   <div class="content container mx-auto p-4 max-w-4xl">
     <h1 class="text-3xl font-bold text-black mb-4">Checkout</h1>
