--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -44,17 +44,20 @@
       </section>
 
       <!-- Order summary -->
-      <section aria-labelledby="summary-heading" class="mt-16 rounded-lg bg-gray-50 px-4 py-6 sm:p-6 lg:col-span-5 lg:mt-0 lg:p-8">
+      <section aria-labelledby="summary-heading" class="mt-16 rounded-lg bg-gray-50 px-4 py-6 sm:p-6 lg:col-span-5 lg:mt-0 lg:p-8 border border-gray-200">
         <h2 id="summary-heading" class="text-lg border-b pb-4 font-medium text-gray-900">Order summary</h2>
 
         <dl class="mt-6 space-y-4">
-          <div class="grid-cols-1 items-center justify-between">
-            <dt class="text-sm text-gray-600">Subtotal</dt>
-            <div *ngFor="let item of cartItems" class="flex flex-col">
-              <p class="text-xl font-semibold text-black">{{ item.productName }}</p>
-              <p class="text-gray-500">$ {{ item.price }}</p>
+          <ul role="list" class="divide-y divide-gray-200">
+            <div *ngFor="let item of cartItems" class="flex items-center m-2 p-4">
+              <img [src]="item.imageUrl" [alt]="item.productName" class="w-24 h-24 rounded-md">
+              <div>
+                <p class="text-sm text-black font-bold px-3">{{ item.productName }}</p>
+                <p class="text-sm text-gray-500 px-3">€{{ item.price }}</p>
+                <p class="text-sm text-gray-500 px-3">Quantity: {{ item.quantity }}</p>
+              </div>
             </div>
-          </div>
+          </ul>
           <div class="flex items-center justify-between border-t border-gray-200 pt-4">
             <dt class="flex items-center text-sm text-gray-600">
               <span>Shipping estimate</span>
