--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,158 +1,203 @@
 <app-stepper></app-stepper>
-<div class="wrapper bg-gray-100 text-black">
-  <div class="content container mx-auto p-4 max-w-4xl">
-    <h1 class="text-3xl font-bold text-black mb-4">Checkout</h1>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <div class="md:col-span-2">
-        <button (click)="fillTestData()" class="mb-4 bg-blue-500 text-white py-2 px-4 rounded">Fill Test Data</button>
-        <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
-          <div class="mb-6">
-            <h3 class="text-lg font-bold text-black">Contact Information</h3>
-            <label for="email" class="block text-sm font-medium text-black">Email address</label>
-            <input type="email" id="email" formControlName="email"
-                   class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+<div class="">
+  <div class="mx-auto max-w-2xl px-4 pb-24 pt-16 sm:px-6 lg:max-w-7xl lg:px-8 bg-gray-50 border-gray-200 border-2 rounded-md">
+    <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl text-center mb-8 ">Shopping Cart</h1>
+
+    <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()" class="lg:grid lg:grid-cols-2 lg:gap-x-12 xl:gap-x-16">
+      <div>
+        <div>
+          <h2 class="text-lg font-bold text-gray-900 border-1">Contact information</h2>
+
+          <div class="mt-4">
+            <label for="email-address" class="block text-sm font-bold text-gray-700">Email address</label>
+            <div class="mt-1">
+              <input type="email" id="email-address" formControlName="email" name="email-address" autocomplete="email"
+                     class="block w-full rounded-md border-gray-200 outline-none shadow-sm p-2 sm:text-sm border-2"
+                     [ngClass]="{'border-red-400': checkoutForm.get('email')?.invalid && (checkoutForm.get('email')?.touched || formSubmitted)}">
+            </div>
             <div *ngIf="checkoutForm.get('email')?.invalid && (checkoutForm.get('email')?.touched || formSubmitted)"
                  class="text-red-600 text-sm mt-1">
               Please enter a valid email address.
             </div>
           </div>
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+        </div>
+
+        <div class="mt-10 border-t border-gray-200 pt-10">
+          <h2 class="text-lg font-bold text-gray-900">Shipping information</h2>
+
+          <div class="mt-4 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-4">
+            <!-- First Name -->
             <div>
-              <label for="firstName" class="block text-sm font-medium text-black">First name</label>
-              <input type="text" id="firstName" formControlName="firstName"
-                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
-              <div
-                *ngIf="checkoutForm.get('firstName')?.invalid && (checkoutForm.get('firstName')?.touched || formSubmitted)"
-                class="text-red-600 text-sm mt-1">
+              <label for="first-name" class="block text-sm font-bold text-gray-700">First name</label>
+              <div class="mt-1">
+                <input type="text" id="first-name" formControlName="firstName" name="first-name" autocomplete="given-name"
+                       class="block w-full rounded-md border-gray-200 outline-none shadow-sm p-2 border-2 sm:text-sm"
+                       [ngClass]="{'border-red-400': checkoutForm.get('firstName')?.invalid && (checkoutForm.get('firstName')?.touched || formSubmitted)}">
+              </div>
+              <div *ngIf="checkoutForm.get('firstName')?.invalid && (checkoutForm.get('firstName')?.touched || formSubmitted)"
+                   class="text-red-600 text-sm mt-1">
                 First name is required.
               </div>
             </div>
+
+            <!-- Last Name -->
             <div>
-              <label for="lastName" class="block text-sm font-medium text-black">Last name</label>
-              <input type="text" id="lastName" formControlName="lastName"
-                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
-              <div
-                *ngIf="checkoutForm.get('lastName')?.invalid && (checkoutForm.get('lastName')?.touched || formSubmitted)"
-                class="text-red-600 text-sm mt-1">
+              <label for="last-name" class="block text-sm font-bold text-gray-700">Last name</label>
+              <div class="mt-1">
+                <input type="text" id="last-name" formControlName="lastName" name="last-name" autocomplete="family-name"
+                       class="block w-full rounded-md border-gray-200 outline-none shadow-sm p-2 border-2 sm:text-sm"
+                       [ngClass]="{'border-red-400': checkoutForm.get('lastName')?.invalid && (checkoutForm.get('lastName')?.touched || formSubmitted)}">
+              </div>
+              <div *ngIf="checkoutForm.get('lastName')?.invalid && (checkoutForm.get('lastName')?.touched || formSubmitted)"
+                   class="text-red-600 text-sm mt-1">
                 Last name is required.
               </div>
             </div>
-          </div>
-          <h3 class="text-lg font-bold text-black">Shipping Address</h3>
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
-            <div>
-              <label for="country" class="block p-1 outline-none text-sm font-medium text-black">Country</label>
-              <select id="country" formControlName="country"
-                      class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm"
-                      (change)="onCountryChange($event)">
-                <option>Select country</option>
-                <option *ngFor="let country of countries">{{ country }}</option>
-              </select>
-              <div
-                *ngIf="checkoutForm.get('country')?.invalid && (checkoutForm.get('country')?.touched || formSubmitted)"
-                class="text-red-600 text-sm mt-1">
-                Country is required.
+
+            <!-- Address -->
+            <div class="sm:col-span-2">
+              <label for="address" class="block text-sm font-bold text-gray-700">Address</label>
+              <div class="mt-1">
+                <input type="text" formControlName="address" name="address" id="address" autocomplete="street-address"
+                       class="block w-full rounded-md border-gray-200 outline-none shadow-sm sm:text-sm p-2 border-2"
+                       [ngClass]="{'border-red-400': checkoutForm.get('address')?.invalid && (checkoutForm.get('address')?.touched || formSubmitted)}">
               </div>
-            </div>
-            <div>
-              <label for="state" class="block p-1 outline-none text-sm font-medium text-black">State / Province</label>
-              <input type="text" id="state" formControlName="state"
-                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
-              <div *ngIf="checkoutForm.get('state')?.invalid && (checkoutForm.get('state')?.touched || formSubmitted)"
+              <div *ngIf="checkoutForm.get('address')?.invalid && (checkoutForm.get('address')?.touched || formSubmitted)"
                    class="text-red-600 text-sm mt-1">
-                State / Province is required.
-              </div>
-            </div>
-          </div>
-          <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-6">
-            <div class="md:col-span-2">
-              <label for="address" class="block text-sm font-medium text-black">Address</label>
-              <input type="text" id="address" formControlName="address"
-                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
-              <div
-                *ngIf="checkoutForm.get('address')?.invalid && (checkoutForm.get('address')?.touched || formSubmitted)"
-                class="text-red-600 text-sm mt-1">
                 Address is required.
               </div>
             </div>
-            <div>
-              <label for="apartmentNumber" class="block text-sm font-medium text-black">Apartment number</label>
-              <input type="text" id="apartmentNumber" formControlName="apartmentNumber"
-                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+
+            <!-- Apartment number-->
+            <div class="sm:col-span-2">
+              <label for="apartment" class="block text-sm font-bold text-gray-700">Apartment number.</label>
+              <div class="mt-1">
+                <input type="text" formControlName="apartmentNumber" name="apartment" id="apartment"
+                       class="block w-full rounded-md border-gray-200 outline-none shadow-sm sm:text-sm p-2 border-2">
+              </div>
             </div>
-          </div>
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+
+            <!-- City -->
             <div>
-              <label for="city" class="block p-1 outline-none text-sm font-medium text-black">City</label>
-              <input type="text" id="city" formControlName="city"
-                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+              <label for="city" class="block text-sm font-bold text-gray-700">City</label>
+              <div class="mt-1">
+                <input type="text" formControlName="city" name="city" id="city" autocomplete="address-level2"
+                       class="block w-full rounded-md border-gray-200 outline-none shadow-sm sm:text-sm p-2 border-2"
+                       [ngClass]="{'border-red-400': checkoutForm.get('city')?.invalid && (checkoutForm.get('city')?.touched || formSubmitted)}">
+              </div>
               <div *ngIf="checkoutForm.get('city')?.invalid && (checkoutForm.get('city')?.touched || formSubmitted)"
                    class="text-red-600 text-sm mt-1">
                 City is required.
               </div>
             </div>
+
+            <!-- Country -->
             <div>
-              <label for="zip" class="p-1 outline-none block text-sm font-medium text-black">Postal code</label>
-              <input type="text" id="zip" formControlName="zip"
-                     class="mt-1 p-1 outline-none block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm">
+              <label for="country" class="block text-sm font-bold text-gray-700">Country</label>
+              <div class="mt-1">
+                <select formControlName="country" id="country" name="country" autocomplete="country-name"
+                        class="block w-full rounded-md border-gray-200 outline-none shadow-sm sm:text-sm p-2 border-2"
+                        [ngClass]="{'border-red-400': checkoutForm.get('country')?.invalid && (checkoutForm.get('country')?.touched || formSubmitted)}">
+                  <option *ngFor="let country of countries">{{country}}</option>
+                </select>
+              </div>
+              <div *ngIf="checkoutForm.get('country')?.invalid && (checkoutForm.get('country')?.touched || formSubmitted)"
+                   class="text-red-600 text-sm mt-1">
+                Country is required.
+              </div>
+            </div>
+
+            <!-- State/Province -->
+            <div>
+              <label for="state" class="block text-sm font-bold text-gray-700">State / Province</label>
+              <div class="mt-1">
+                <select formControlName="state" id="state" name="state" autocomplete="address-level1"
+                        class="block w-full rounded-md border-gray-200 outline-none shadow-sm sm:text-sm p-2 border-2"
+                        [ngClass]="{'border-red-400': checkoutForm.get('state')?.invalid && (checkoutForm.get('state')?.touched || formSubmitted)}">
+                  <option *ngFor="let state of availableStates">{{state}}</option>
+                </select>
+              </div>
+              <div *ngIf="checkoutForm.get('state')?.invalid && (checkoutForm.get('state')?.touched || formSubmitted)"
+                   class="text-red-600 text-sm mt-1">
+                State/Province is required.
+              </div>
+            </div>
+
+            <!-- Postal Code -->
+            <div>
+              <label for="postal-code" class="block text-sm font-bold text-gray-700">Postal code</label>
+              <div class="mt-1">
+                <input type="text" formControlName="zip" name="postal-code" id="postal-code" autocomplete="postal-code"
+                       class="block w-full rounded-md border-gray-200 outline-none shadow-sm sm:text-sm p-2 border-2"
+                       [ngClass]="{'border-red-400': checkoutForm.get('zip')?.invalid && (checkoutForm.get('zip')?.touched || formSubmitted)}">
+              </div>
               <div *ngIf="checkoutForm.get('zip')?.invalid && (checkoutForm.get('zip')?.touched || formSubmitted)"
                    class="text-red-600 text-sm mt-1">
                 Postal code is required.
               </div>
             </div>
-          </div>
-          <div class="grid grid-cols-1 justify-items-center">
-            <div>
-              <a href="/cart"
-                 class="w-48 block bg-gray-500 text-gray-100 py-1.5 px-3 transition hover:bg-gray-700 text-center rounded-lg mb-2">Back to
-                cart</a>
+
+            <!-- Phone -->
+            <div class="sm:col-span-2">
+              <label for="phone" class="block text-sm font-bold text-gray-700">Phone</label>
+              <div class="mt-1">
+                <input type="text" formControlName="phone" name="phone" id="phone" autocomplete="tel"
+                       class="block w-full rounded-md border-gray-200 outline-none shadow-sm sm:text-sm p-2 border-2"
+                       [ngClass]="{'border-red-400': checkoutForm.get('phone')?.invalid && (checkoutForm.get('phone')?.touched || formSubmitted)}">
+              </div>
+              <div *ngIf="checkoutForm.get('phone')?.invalid && (checkoutForm.get('phone')?.touched || formSubmitted)"
+                   class="text-red-600 text-sm mt-1">
+                Phone number is required.
+              </div>
+              <button (click)="fillTestData()" class="mb-4 bg-blue-500 text-white mt-6 py-2 px-4 rounded">Fill Test Data</button>
             </div>
-            <div>
-              <button type="submit"
-                      class="w-48 block bg-gray-600 text-white py-1.5 px-3 transition hover:bg-gray-700 text-center rounded-lg mb-2">Proceed
-                to payment
-              </button>
-            </div>
-          </div>
-        </form>
-      </div>
-      <div class="p-4 bg-white border border-gray-700 rounded-md">
-        <h2 class="text-xl font-bold mb-4">Order summary</h2>
-        <div *ngFor="let item of cartItems" class="flex items-center justify-between mb-4">
-          <img [src]="item.imageUrl" [alt]="item.productName" class="w-16 h-16 rounded-md">
-          <div class="ml-4">
-            <p class="text-sm text-black">{{ item.productName }}</p>
-            <p class="text-sm text-black">€{{ item.price }}</p>
-            <p class="text-sm text-black">Quantity: {{ item.quantity }}</p>
-          </div>
-        </div>
-        <div class="mb-4">
-          <a class="text-sm">Need to leave a note or instructions? Write an email to dsk.bis&#64;wp.pl</a>
-        </div>
-<!--        <div *ngIf="showNoteInput">-->
-<!--          <textarea id="note"-->
-<!--                    class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm"-->
-<!--                    placeholder="Enter your note here" rows="3"></textarea>-->
-<!--        </div>-->
-        <div class="border-t border-gray-700 pt-4">
-          <div class="flex items-center justify-between text-sm mb-2">
-            <span>Subtotal</span>
-            <span>€{{ totalAmount }}</span>
-          </div>
-          <div class="flex items-center justify-between text-sm mb-2">
-            <span>Shipping</span>
-            <span>Pending</span>
-          </div>
-          <div class="flex items-center justify-between text-sm mb-2">
-            <span>Tax</span>
-            <span>Pending</span>
-          </div>
-          <div class="flex items-center justify-between text-lg font-bold">
-            <span>Total</span>
-            <span>EUR €{{ totalAmount }}</span>
           </div>
         </div>
       </div>
-    </div>
+
+      <!-- Order summary -->
+      <div class="mt-10 lg:mt-0">
+        <h2 class="text-lg font-bold text-gray-900">Order summary</h2>
+
+        <div class="mt-4 rounded-lg border border-gray-200 bg-white shadow-sm">
+          <h3 class="sr-only">Items in your cart</h3>
+          <ul role="list" class="divide-y divide-gray-200">
+            <div *ngFor="let item of cartItems" class="flex items-center m-4 p-4">
+              <img [src]="item.imageUrl" [alt]="item.productName" class="w-24 h-24 rounded-md">
+              <div>
+                <p class="text-sm text-black font-bold px-3">{{ item.productName }}</p>
+                <p class="text-sm text-gray-500 px-3">€{{ item.price }}</p>
+                <p class="text-sm text-gray-500 px-3">Quantity: {{ item.quantity }}</p>
+              </div>
+            </div>
+          </ul>
+
+          <dl class="space-y-6 border-t border-gray-200 px-4 py-6 sm:px-6">
+            <div class="flex items-center justify-between">
+              <dt class="text-sm">Subtotal</dt>
+              <dd class="text-sm font-bold text-gray-900">$64.00</dd>
+            </div>
+            <div class="flex items-center justify-between">
+              <dt class="text-sm">Shipping</dt>
+              <dd class="text-sm font-bold text-gray-900">$5.00</dd>
+            </div>
+            <div class="flex items-center justify-between">
+              <dt class="text-sm">Taxes</dt>
+              <dd class="text-sm font-bold text-gray-900">$5.52</dd>
+            </div>
+            <div class="flex items-center justify-between border-t border-gray-200 pt-6">
+              <dt class="text-base font-bold">Total</dt>
+              <dd class="text-base font-bold text-gray-900">${{ totalAmount }}</dd>
+            </div>
+          </dl>
+
+          <div class="border-t border-gray-200 px-4 py-6 sm:px-6">
+            <button type="submit"
+                    class="w-full block bg-gray-600 text-white py-1.5 px-3 transition hover:bg-gray-700 text-center rounded-lg mb-2">Payment
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
