--- a/src/app/components/admin-panel/login/login.component.html
+++ b/src/app/components/admin-panel/login/login.component.html
@@ -1,34 +1,36 @@
-<section class="flex items-center justify-center pt-12">
-  <div class="max-w-5xl p-6 bg-white shadow-lg text-left">
-    <div class="md:mx-6 md:p-12 w-full">
-      <h1 class="text-4xl font-bold text-gray-900 text-center">Logowanie do panelu administratora</h1>
-      <p class="text-lg text-gray-700 text-center mt-4 mb-8">Wprowadź swoje dane logowania</p>
-      <form>
-        <div class="mb-4">
-          <label for="username" class="block text-sm font-medium text-gray-700">Nazwa użytkownika</label>
-          <input
-            type="text"
-            id="username"
-            class="mt-1 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm focus:border-indigo-500 focus:ring-indigo-500"
-          />
-        </div>
-        <div class="mb-4">
-          <label for="password" class="block text-sm font-medium text-gray-700">Hasło</label>
-          <input
-            type="password"
-            id="password"
-            class="mt-2 block w-full rounded-md border-gray-600 bg-slate-300 text-black shadow-sm focus:border-indigo-500 focus:ring-indigo-500"
-          />
-        </div>
-        <div class="text-center mb-6">
-          <button
-            type="button"
-            class="inline-block w-half rounded bg-gradient-to-r from-orange-400 to-pink-500 text-white py-2 px-4 font-medium uppercase leading-normal shadow-md hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out"
-          >
-            Zaloguj się
-          </button>
-        </div>
-      </form>
-    </div>
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Logowanie do Panelu
+      Administratora</h2>
   </div>
-</section>
+
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <form class="space-y-6">
+      <div>
+        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email</label>
+        <div class="mt-2">
+          <input id="email" name="email" type="email" autocomplete="email" required
+                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-between">
+          <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Hasło</label>
+        </div>
+        <div class="mt-2">
+          <input id="password" name="password" type="password" autocomplete="current-password" required
+                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+        </div>
+      </div>
+
+      <div>
+        <button type="button"
+                (click)="navigateToDashboard()"
+                class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+          Zaloguj się
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
