--- a/src/app/components/admin-panel/discount-codes/discount-codes.component.html
+++ b/src/app/components/admin-panel/discount-codes/discount-codes.component.html
@@ -3,29 +3,34 @@
   <div class="px-4 mx-20 my-5 sm:px-6 lg:px-8 border">
     <div class="sm:flex sm:items-center">
       <div class="sm:flex-auto">
-        <h1 class="text-base font-semibold leading-6 text-gray-900 p-4">Kody zniżkowe</h1>
+        <h1 class="text-base font-semibold leading-6 text-gray-900 p-2">Kody zniżkowe</h1>
         <p class="mt-2 text-sm text-gray-700">Lista wszystkich kodów zniżkowych</p>
       </div>
-      <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
+      <div class="mt-4 flex flex-col">
+
         <button type="button"
-                class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+                class="mb-2 block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
           Dodaj nowy kod
         </button>
+        <div *ngIf="isRemoveButtonVisible()">
+          <button (click)="removeCheckedItems()" type="button"
+                  class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+            Usuń zaznaczone
+          </button>
+        </div>
       </div>
     </div>
-    <div *ngIf="isRemoveButtonVisible()" class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
-      <button (click)="removeCheckedItems()" type="button"
-              class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
-        Usuń zaznaczone
-      </button>
+    <div *ngIf="message" class="mt-6 text-green-600 font-semibold">
+      <p>{{ message }}</p>
     </div>
-    <div class="mt-8 flow-root">
+    <div class="flow-root">
       <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-4">
           <table class="min-w-full divide-y divide-gray-300">
             <thead>
             <tr>
-              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Kod</th>
+              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Zaznacz</th>
+              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900">Kod</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Czy aktywny</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Typ zniżki</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Wartość zniżki</th>
@@ -34,15 +39,14 @@
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Maksymalna ilość użyć</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Aktywny od</th>
               <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Aktywny do</th>
-              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Zaznacz</th>
-              <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
-                <span class="sr-only">Edytuj</span>
-              </th>
             </tr>
             </thead>
             <tbody class="divide-y divide-gray-200">
             <tr *ngFor="let code of discountCodes; let i = index" class="odd:bg-white even:bg-gray-100">
-              <td class="py-4 pl-4 pr-3 text-sm font-medium text-gray-900 whitespace-nowrap sm:pl-0">{{ code.code }}</td>
+              <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">
+                <input type="checkbox" [(ngModel)]="checkedIndexes[i]" class="form-checkbox h-4 w-4 text-gray-500" />
+              </td>
+              <td class="py-4 pl-4 m-2 text-sm font-medium text-gray-900 whitespace-nowrap ">{{ code.code }}</td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">
                 {{ code.active ? "Tak" : "Nie" }}
               </td>
@@ -53,11 +57,8 @@
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.usageLimit }}</td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.validFrom | date:'mediumDate' }}</td>
               <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">{{ code.validTo | date:'mediumDate' }}</td>
-              <td class="px-3 py-4 text-sm text-gray-500 whitespace-nowrap">
-                <input type="checkbox" [(ngModel)]="checkedIndexes[i]" class="form-checkbox h-4 w-4 text-gray-500" />
-              </td>
-              <td class="relative py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
-                <a href="#" class="text-indigo-600 hover:text-indigo-900">Edytuj</a>
+              <td class="relative mx-2 py-4 pl-3 pr-4 text-right text-sm font-medium">
+                <a href="#" class="text-indigo-600 font-semibold hover:text-indigo-900">Edytuj</a>
               </td>
             </tr>
             </tbody>
